# dropkick

./: Cargo.toml  LICENSE  README.md  demo.tape
src/: app.rs  config.rs  interpolation_config.rs  main.rs  template_rendering.rs
