[package]
name = "dropkick"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["tui", "templates"]

[[bin]]
name = "dk"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tui-tree-widget = "0.22"
syntect = "5.0"
two-face = "0.4"

