[package]
name = "dropkick"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A TUI for browsing and importing code samples into the workding directory defined per https://github.com/thenotary/bundlegem"
categories = ["command-line-interface"]
keywords = ["tui", "templates"]

[[bin]]
name = "dropkick"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tui-tree-widget = "0.22"
syntect = "5.0"
two-face = "0.4"
tinytemplate = "1.2"
serde = { version = "1.0", features = ["derive"] }
