[package]
name = "dropkick"
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A TUI for browsing and importing code samples into the workding directory defined per https://github.com/thenotary/bundlegem"
categories = ["command-line-interface"]
keywords = ["tui", "templates"]

[[bin]]
name = "dropkick"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tui-tree-widget = "0.22"
syntect = "5.0"
two-face = "0.4"
serde = { version = "1.0", features = ["derive"] }
regex = "1.12.2"
handlebars = "6.3.2"
serde_json = "1.0.145"
serde_yaml = "0.9"
